fix: SonarQube warning 처리